apps/django-test-v4/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-test-v4
  labels:
    name: django-test-v4
    managed-by: dev-portal
